Fix Thunor logo left alignment with body

--- a/pyhts/static/pyhts/css/pyhts.css
+++ b/pyhts/static/pyhts/css/pyhts.css
@@ -13,9 +13,12 @@
     padding: 0 30px 20px 30px;
     border-left: 1px solid #e7e7e7;
   }
-    .navbar-nav > li {
-        float: none;
-    }
+  .navbar-header {
+    margin-left: 15px;
+  }
+  .navbar-nav > li {
+    float: none;
+  }
 }
 .powered-by {
     text-align: center;
